syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "SP.API.Service";

package Api;

service ApiServices {
  rpc GetLoginAttempts ( LoginAttemptsRequest ) returns (LoginAttemptsResponse) {}
}

message LoginAttemptsRequest {
	LoginAttempts loginAttempts = 1;
	bool detectIPRange = 2;
	google.protobuf.Timestamp fromTime = 3;
}

message LoginAttemptsResponse {
	int32 result = 1;
}

message LoginAttempts {
	int64 id = 1;
	string ipAddress = 2;
	string ipAddressRange = 3;
	google.protobuf.Timestamp eventDate = 4;
	string details = 5;
}