syntax = "proto3";
import "Protos/loginAttempts.proto";
import "Protos/blocks.proto";
import "Protos/statistics.proto";

option csharp_namespace = "SP.Models.Api";

package Api;

service ApiServices {
	rpc GetLoginAttempts ( GetLoginAttemptsRequest ) returns ( GetLoginAttemptsResponse );
	rpc AddLoginAttempt ( AddLoginAttemptRequest ) returns ( AddLoginAttemptResponse );

	rpc GetUnblocks ( GetUnblocksRequest ) returns ( GetUnblocksResponse );
	rpc AddBlock ( AddBlockRequest ) returns ( AddBlockResponse );
	rpc UpdateBlock ( UpdateBlockRequest ) returns ( UpdateBlockResponse );

	rpc StatisticsUpdateBlocks (StatisticsUpdateBlocksRequest ) returns ( StatisticsUpdateBlocksResponse );
}