syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "SP.Api.Models";

package Api;

message GetAccessAttemptsRequest {
	AccessAttempt AccessAttempt = 1;
	bool detectIPRange = 2;
	google.protobuf.Timestamp fromTime = 3;
}

message GetAccessAttemptsResponse {
	int32 result = 1;
}

message AddAccessAttemptRequest {
	AccessAttempt accessAttempts = 1;
}

message AddAccessAttemptResponse {
	bool result = 1;
}

message AccessAttempt {
	int64 id = 1;
	string source = 2;
	string ipAddress = 3;
	int32 ipAddress1 = 4;
	int32 ipAddress2 = 5;
	int32 ipAddress3 = 6;
	int32 ipAddress4 = 7;
	string ipAddressRange = 8;
	google.protobuf.Timestamp eventDate = 9;
	string details = 10;
	int32 attackType = 11;
	string custom1 = 12;
	int32 custom2 = 13;
	int64 custom3 = 14;
}